gitops/tooling-routes/minio-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
  namespace: minio
spec:
  parentRefs:
    - name: gw-int
      namespace: platform-system
  hostnames:
    - "minio.int.${DOMAIN}"
  rules:
    - backendRefs:
        - name: minio-console
          port: 9001
