gitops/tooling-routes/minio-s3-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-s3
  namespace: minio
spec:
  parentRefs:
    - name: gw-int
      namespace: platform-system
  hostnames:
    - "s3.int.${domain}"
  rules:
    - backendRefs:
        - name: minio
          port: 9000
